--- a/site/content/index.html
+++ b/site/content/index.html
@@ -1,7 +1,7 @@
 {% extends "_base.html" %}
 
 {%hyde
-    title: "Main Page"
+    title: "Home"
     created: 2010-12-28
     meta_description: "Index and latest content"
     listing: True
