Added site config for lighttpd, few other tweaks.

--- a/site/content/about.html
+++ b/site/content/about.html
@@ -38,11 +38,16 @@ of my own creation.  All templates and pages are hand-written, mostly in
 so you're likely to find some little bonuses in the page source, should the
 desire strike.
 
+<h3>Accessibility</h3>
 I strive to ensure that everything on the site is handled gracefully even in
 less-capable user agents such as [elinks](http://www.elinks.cz/) or
 [w3m](http://w3m.sourceforge.net), most significantly by avoiding the use of
 client-side scripting (i.e., JavaScript) wherever possible, but also by
 including images only sparingly.
+
+The site is also available over ipv6 at
+[ipv6.taricorp.net](http://ipv6.taricorp.net) for everyone out there who
+wants to be future-proof.
 
 {% endmarkdown %}
 {% endblock %}
