--- a/site/content/index.html
+++ b/site/content/index.html
@@ -7,6 +7,11 @@
     listing: True
 %}
 
+{% block nav_custom %}
+    <hr class="break"/>
+    <p>Newest content<p>
+{% endblock %}
+
 {% block main_content %}
 
     {% recent_posts recent_posts 7 %}
