--- a/site/content/muse/the86.html
+++ b/site/content/muse/the86.html
@@ -6,6 +6,16 @@
     created: 2011-07-29
 %}
 
+{% block nav_custom %}
+<hr class="break"/>
+<p>This page contains some of my notes on features of the TI-86, which first
+appeared on my Freewebs site sometime around 2005.  I've made an effort to
+correct and clarify some things, but it may still be only partially accurate
+in some places.</p>
+<p>For all things TI-86, readers may find <a href="http://guide.ticalc.org/">
+The Guide</a> useful.</p>
+{% endblock %}
+
 {% block main_content %}
 {% markdown %}
 
