Add PGP public key.

--- a/site/content/about.html
+++ b/site/content/about.html
@@ -54,6 +54,9 @@ a variety of technology-related things, mostly involving some sort of
 programming.  The notable (and somewhat complete) ones can be found in the
 [projects](/projects/) sections of this site.
 
+My OpenPGP public key is available on this site, at
+[/pmarheine.asc](/pmarheine.asc).
+
 <h3>Around the web</h3>
 There are a number of other places I can be found around the web, usually going
 by the alias of 'tari' or some variant thereof.  Some of the more notable
