Fix dumb and/an typo in swap muse.

--- a/site/content/muse/swap.html
+++ b/site/content/muse/swap.html
@@ -179,7 +179,7 @@ discretion is important, a counterexample:
 
 My netbook doesn't need swap, and really shouldn't have any.  I only have once
 storage device in the machine, which is a very slow SSD with what is likely
-and extremely simple controller (that does little to no wear-leveling).
+an extremely simple controller (that does little to no wear-leveling).
 Because the primary storage in that machine is so slow, I'm probably never
 going to see any reasonable performance improvement by putting a swap partition
 on it.  The machine does have a couple SD card slots, however, and it might
