Things and stuff.

--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@ layout: default
 
 <div class="pagination">
   {% if paginator.previous_page %}
-    <a href="{{ paginator.previous_page_path }}" class="previous">Previous &laquo;</a>
+    <a href="{{ paginator.previous_page_path }}" class="previous">Previous &larr;</a>
   {% endif %}
   <span class="page_number ">Page: {{ paginator.page }} of {{ paginator.total_pages }}</span>
   {% if paginator.next_page %}
-    <a href="{{ paginator.next_page_path }}" class="next">Next &rqauo;</a>
+    <a href="{{ paginator.next_page_path }}" class="next">Next &rarr;</a>
   {% endif %}
 </div>
 
